--- a/page/class/warior/warior_v.css
+++ b/page/class/warior/warior_v.css
@@ -15,5 +15,79 @@ table {
 	text-align: center;
 	font-family: serif;
     font-weight: 100px;
-    font-size: 19px;}
+    font-size: 14px;}
+
+h2 {
+  font-weight: normal;
+  font-size: 15px;
+}
+
+h3 {
+  font-weight: normal;
+  font-size: 18px;
+  
+}
+h4 {
+  font-weight: normal;
+  font-size: 18px;
+  text-decoration: underline;
+}
+b1 {
+  font-size: 20px;
+  font-weight: bold;
+}
+.dropbtn {
+    background-color: #a7a9ab;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    display: inline-block;
+    width: 100%;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+    margin-bottom : 20px;
+    width: 100%;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #dbbaba;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    width: 100%;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    width: 100%;
+}
+
+.dropdown-content a:hover {background-color: #ddd;
+  width: 100%;
+}
+
+.dropdown:hover .dropdown-content {display: block;
+  width: 100%;
+}
+
+.dropdown:hover .dropbtn {background-color: #78797a;
+  width: 100%;
+}
+
+tbody {
+  border: 1px solid black;
+}
+
+th, td {
+   border: 1px solid black;
+   
 }
